# TVectorBlur

./: .gitignore  AI_CONTEXT.yaml  CHANGELOG.md  CI_TESTING.md  CMakeLists.txt  CONTRIBUTING.md  EULA.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  __init__.py  _consts.py  _menu_creator.py  _node_setup.py  _plugin_loader.py  init.py  menu.py  node.json  node_build_config.json
.github/workflows/: build.yml  nuke-build.yml  nuke-runtime-smoke.yml  release.yml  version-tag.yml
config/: build_profile.json  nuke_versions.json
docs/: INSTALL.md  RELEASES.md
publish/: README.md  init.py
publish/TVectorBlur/: __init__.py  _consts.py  _menu_creator.py  _node_setup.py  _plugin_loader.py  init.py  menu.py
scripts/: build_all_windows.ps1  build_linux.sh  build_windows.ps1  package_all_releases.py  package_release.py
src/: TVectorBlurCUDA.cpp  TVectorBlurCUDAKernel.cu  TVectorBlurCUDAKernel.h  TVectorBlurShared.h
tools/: Assert-NukeLayout.ps1  Assert-NukeMatrixCompleteness.ps1  Get-NukeBuildMatrix.ps1  Get-NukeBuildProfile.ps1  Initialize-NukeTemplate.ps1
work/: .gitignore  CI_TESTING.md  CMakeLists.txt  Cargo.toml  README.md  build_all_windows_versions.ps1  dot_nuke_init_example.py  init.py
work/TVectorBlur/: _consts.py  _credits_link.py  _node_setup.py  _plugin_loader.py  init.py
work/crates/t-vector-blur-nuke/: Cargo.toml  build.rs
work/crates/t-vector-blur-nuke/src/: lib.rs  t_vector_blur.cpp  t_vector_blur_noise.cpp  t_vector_blur_processing.cpp  t_vector_blur_render.cpp  t_vector_blur_ui.cpp
work/docker/nukedockerbuild-builder/: Dockerfile.cuda  build-node.sh
work/docs/: ARCHITECTURE.md  BUILD.md  INSTALL.md  LINUX_RUNNER.md  NODE_REFERENCE.md  RELEASE.md  RELEASES.md  TEMPLATE_WORKFLOW.md
work/scripts/: build_linux.sh  build_windows.ps1  build_with_nukedockerbuild.ps1  build_with_nukedockerbuild.sh  check_linux_runner.sh  package_all_releases.py  package_release.py  runtime_smoke.py  start_linux_runner_with_env.sh  sync_publish_bins.py  validate_package_import.py  write_linux_runner_env.sh
work/src/: TVectorBlurCUDA.cpp
work/xtask/: Cargo.toml  build.rs
work/xtask/src/: main.rs  util.rs
work/xtask/src/nuke/: compile.rs  mod.rs  package.rs  sources.rs
