[package]
name = "xtask"
version = "2.0.0"
edition = "2024"
publish = false

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5", features = ["derive"] }
duct = "1.1"
log = "0.4"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
reqwest = { version = "0.13", features = ["json", "stream"] }
url = "2.5.7"
indicatif = "0.18.3"
futures-util = "0.3.31"
async-compression = { version = "0.4.34", default-features = false, features = [
    "all-implementations",
    "gzip",
] }
astral-tokio-tar = "0.5.6"
zip = { version = "6.0.0", default-features = false, features = ["deflate", "bzip2"] }
find-msvc-tools = "0.1.5"

[build-dependencies]
anyhow = "1.0.100"
